# strict_mark

./: Cargo.toml  README.md  StrictMark.md  TaskTracker.md
examle_sm/: base.sm
src/: main.rs
src/data/: error.rs  mod.rs  pre_final_enums.rs
src/data/parser/: comments.rs  composite_text.rs  enumerate.rs  formula.rs  mod.rs  paragraph.rs  params.rs  text.rs  title.rs
