[package]
name = "strict_mark"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.6.0"
chumsky = { version = "0.13.0", features = ["serde"] }
clap = {version = "4.6.1", features = ["derive"]}
crabtime = "1.1.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sugar = "0.2.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
